Fix some table alignment CSS

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -131,6 +131,11 @@ table{
 table tr:first-child th{
 	padding: 0 0 0.5em 0;
 }
+
+th,
+td{
+	vertical-align: bottom;
+}
 /* end general table formatting */
 
 /* roman numbered list */
@@ -222,6 +227,10 @@ table tr:first-child th{
 	font-variant-numeric: tabular-nums;
 	padding-left: 1em;
 	text-align: right;
+}
+
+#appendix-1 table:nth-of-type(3) td:nth-of-type(2){
+	text-align: initial;
 }
 
 #appendix-2 table:nth-of-type(3) td + td{
